# burmese_corpus_scraper

./: .gitignore  README.md  env.example  pyproject.toml  scrape_bbcburmese.ipynb  scrape_telegramchannels.py  scrape_voaburmese.py
data/bbcburmese/: bbcburmese_20250814_102336_100.txt  bbcburmese_20250814_102336_102.txt  bbcburmese_20250814_102336_103.txt  bbcburmese_20250814_102336_105.txt  bbcburmese_20250814_102336_106.txt  bbcburmese_20250814_102336_108.txt  bbcburmese_20250814_102336_109.txt  bbcburmese_20250814_102336_110.txt  bbcburmese_20250814_102336_111.txt  bbcburmese_20250814_102336_115.txt  bbcburmese_20250814_102336_117.txt  bbcburmese_20250814_102336_118.txt  bbcburmese_20250814_102336_12.txt  bbcburmese_20250814_102336_120.txt  bbcburmese_20250814_102336_122.txt  bbcburmese_20250814_102336_126.txt  bbcburmese_20250814_102336_127.txt  bbcburmese_20250814_102336_128.txt  bbcburmese_20250814_102336_13.txt  bbcburmese_20250814_102336_130.txt  bbcburmese_20250814_102336_131.txt  bbcburmese_20250814_102336_132.txt  bbcburmese_20250814_102336_134.txt  bbcburmese_20250814_102336_135.txt  bbcburmese_20250814_102336_137.txt  bbcburmese_20250814_102336_138.txt  bbcburmese_20250814_102336_142.txt  bbcburmese_20250814_102336_145.txt  bbcburmese_20250814_102336_146.txt  bbcburmese_20250814_102336_147.txt  bbcburmese_20250814_102336_150.txt  bbcburmese_20250814_102336_154.txt  bbcburmese_20250814_102336_155.txt  bbcburmese_20250814_102336_156.txt  bbcburmese_20250814_102336_157.txt  bbcburmese_20250814_102336_158.txt  bbcburmese_20250814_102336_159.txt  (+188 more)
(+4902 files in other folders)
